/*
 * Copyright 2025 chenjjiaa
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package anvil.settlement;

// Settlement service definition
service SettlementService {
  // Submit matched trades for settlement
  rpc SubmitTrades(SubmitTradesRequest) returns (SubmitTradesResponse);
  
  // Query transaction status
  rpc GetTransactionStatus(GetTransactionStatusRequest) returns (GetTransactionStatusResponse);
}

// Submit trades request
message SubmitTradesRequest {
  string market = 1;
  repeated Trade trades = 2;
  Chain chain = 3;
}

// Submit trades response
message SubmitTradesResponse {
  string tx_hash = 1;
  SubmissionStatus status = 2;
  uint64 confirmations = 3;
  string error = 4;
}

// Transaction status query request
message GetTransactionStatusRequest {
  string tx_hash = 1;
  Chain chain = 2;
}

// Transaction status query response
message GetTransactionStatusResponse {
  string tx_hash = 1;
  SubmissionStatus status = 2;
  uint64 confirmations = 3;
  string error = 4;
}

// Trade definition (matches matching.proto)
message Trade {
  string trade_id = 1;
  string market = 2;
  uint64 price = 3;
  uint64 size = 4;
  OrderSide side = 5;
  uint64 timestamp = 6;
  string maker_order_id = 7;
  string taker_order_id = 8;
}

// Order side enum
enum OrderSide {
  BUY = 0;
  SELL = 1;
}

// Chain enum
enum Chain {
  SOLANA = 0;
  ETHEREUM = 1;
}

// Submission status enum
enum SubmissionStatus {
  PENDING = 0;
  SUBMITTED = 1;
  CONFIRMED = 2;
  FAILED = 3;
}

